# erpnext_sysnova_ai

./: .gitignore  README.md  TROUBLESHOOTING.md  pyproject.toml  setup.py
ai_assistant/: api.py
erpnext_sysnova_ai/: api.py  hooks.py
erpnext_sysnova_ai/public/css/: sysnova_ai_widget.css
erpnext_sysnova_ai/public/js/: sysnova_ai_widget.js
