[project]
name = "erpnext_sysnova_ai"
authors = [
    { name = "Sysnova Solutions", email = "info@sysnovasolutions.com"}
]
description = "Gemini AI Assistant for ERPNext v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "google-generativeai"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
